Added helpful automated behaviours: - When the selection of the last session was a software, the software list gets the focus upon Negatron restart, not the machine list - When clicking on a List button to show the software list and if the textbox next the List button contains a valid software name, the list now always automatically selects this software.